--- a/shop.html
+++ b/shop.html
@@ -133,6 +133,8 @@
         placeholder='Paste an image URL'/>
     <button>add</button>
 </form>
+    
+<section id="electronics-container"></section>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="./main.js"></script>
